--- a/src/scenes/suruculer/tablo.css
+++ b/src/scenes/suruculer/tablo.css
@@ -1,9 +1,5 @@
-.centered-div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; /* Sayfanın tamamına yayılacak şekilde ayarlayabilirsiniz */
-    background-color: #3498db; /* Arka plan rengi */
-    color: #fff; /* Yazı rengi */
-    font-size: 24px; /* Yazı boyutu */
+.css-1qxadfk-MuiPaper-root-MuiDialog-paper {
+  max-width: 150%;
+
   }
+  
