--- a/src/scenes/suruculer/tablo.css
+++ b/src/scenes/suruculer/tablo.css
@@ -2,4 +2,7 @@
   max-width: 150%;
 
   }
-  
+  .font-face {
+    font-family: 'ArialUnicodeMS';
+    src: url('../../data/font/ArialUnicodeMS.ttf') format('truetype');
+  }
